--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,8 +36,26 @@ body {
 		width: 100%;
 		text-align: right;
 		font-size: 20px;
-		padding: 30px 3px  30px 3px;
+		padding: 0px 3px  30px 3px;
 		border: 1px solid black;
+	}
+}
+
+.display {
+	.expression {
+		height: 25%;
+		text-align: left;
+		font-size: 12px;
+	}
+}
+
+.display {
+	.input {
+		height: 75%;
+		width: 100%;
+		text-align: right;
+		font-size: 20px;
+		padding-top: 30px;
 	}
 }
 
