add navbar and link to source

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,11 +11,22 @@ body {
 	background-color: $body-bgrnd;
 }
 
+.navbar {
+	padding-right: 100px;
+}
+
+.source {
+	display: table;
+	margin: 0 auto;
+	padding-top: 20px;
+}
+
 #root {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
 	width: 100%;
+	padding-top: 100px;
 }
 
 .calculator {
